common-applications/control/cla-migration/stat/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cla-stat-service
  namespace: cla-migration
spec:
  ports:
  - name: srv
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: cla-stat
  type: ClusterIP
