common-applications/control/cla-migration/stat/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: cla-stat-ingress
  namespace: cla-migration
spec:
  tls:
    - hosts:
        - cla-stat.osinfra.cn
      secretName: tls-secrets
  rules:
    - host: cla-stat.osinfra.cn
      http:
        paths:
        - backend:
            serviceName: cla-stat-service
            servicePort: 80
          path: /
